k8s/kustomize/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-hive
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-hive
  template:
    metadata:
      labels:
        app: devops-hive
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - name: devops-hive
          image: docker.io/mahmoudabdelgowad/devops_hive:9
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1500Mi"
              cpu: "5000m"
            limits:
              memory: "1500Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
