k8s/kustomize/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: devops-hive
spec:
  ports:
    - port: 8080
