k8s/kustomize/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /temperature
            backend:
              service:
                name: devops-hive
                port:
                  number: 80
          - pathType: Prefix
            path: /metrics
            backend:
              service:
                name: devops-hive
                port:
                  number: 80
          - pathType: Prefix
            path: /version
            backend:
              service:
                name: devops-hive
                port:
                  number: 80
